# cmip6-to-wrfinterm

./: pyproject.toml
conf/: config.MPI-ESM1-2-HR.ini  config.ini.sst
db/: MPI-ESM1-2-HR_SSP.csv
download/: download.py  download.sh
lib/: cmip_handler.py
sample/MPI-ESM1-2-HR/: download.sh  grid.txt
